--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "fib-sequence"
 description = "A library for retrieving fibonacci numbers in base 10"
+authors = ["Kia Strawberries"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/uwukia/fib-sequence"
+keywords = ["fibonacci"]
+categories = ["mathematics"]
 
 [dependencies]
 
